# fermata

./: .gitignore  Cargo.toml  README.md  build-app.ps1  build-app.sh  fermata-claude-code-prompt.md  install-prerequisites.ps1  install-prerequisites.sh  make-icons.py
.claude/: launch.json
fermata-monitor/: Cargo.toml
fermata-monitor/src/: config.rs  interceptor.rs  ipc.rs  main.rs  monitor.rs
fermata-ui/: App.axaml  App.axaml.cs  FermataUI.csproj  Program.cs  app.manifest
fermata-ui/Assets/: AppIcon.icns
fermata-ui/Services/: ConfigService.cs  DatabaseService.cs  IpcServer.cs  MacOS.cs  TrayIconManager.cs
fermata-ui/Styles/: FermataStyles.axaml
fermata-ui/ViewModels/: HistoryViewModel.cs  ReflectionViewModel.cs  SettingsViewModel.cs
fermata-ui/Views/: HistoryWindow.axaml  HistoryWindow.axaml.cs  ReflectionWindow.axaml  ReflectionWindow.axaml.cs  SettingsWindow.axaml  SettingsWindow.axaml.cs
gallery/: index.html
