[package]
name = "fermata-monitor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fermata-monitor"
path = "src/main.rs"

[dependencies]
anyhow     = "1"
thiserror  = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
dirs       = "5"
notify     = "6"
log        = "0.4"
env_logger = "0.11"
chrono     = { version = "0.4", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = { version = "0.2", features = ["extra_traits"] }

[dev-dependencies]
tempfile = "3"
